--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DATABASE_URL="postgresql://username:password@localhost:5432/ts-api-scaffold?schema=public"
-SERVER_PORT=8080
+SERVER_PORT=3000
+JWT_SECRET=your-secret-key
